--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json-server": "json-server --watch src/app/data/todos.json --port 3002"
   },
   "dependencies": {
     "@types/node": "20.4.9",
@@ -14,6 +15,7 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "json-server": "^0.17.3",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
