--- a/package.json
+++ b/package.json
@@ -6,24 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "json-server": "json-server --watch src/app/data/todos.json --port 3002"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.2.0",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@vercel/postgres": "^0.4.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "json-server": "^0.17.3",
-    "next": "13.4.13",
+    "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
+    "prisma": "^5.2.0",
     "tailwindcss": "^3.3.3"
   }
 }
